; ModuleID = '/home/carl/AnghaBench/RetroArch/deps/miniupnpc/extr_miniwget.c_miniwget.c'
source_filename = "/home/carl/AnghaBench/RetroArch/deps/miniupnpc/extr_miniwget.c_miniwget.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@MAXHOSTNAMELEN = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @miniwget(i8* %0, i32* %1, i32 %2, i32* %3) #0 {
  %5 = alloca i8*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32*, align 8
  %10 = alloca i16, align 2
  %11 = alloca i8*, align 8
  %12 = alloca i8*, align 8
  %13 = alloca i64, align 8
  %14 = alloca i32, align 4
  store i8* %0, i8** %6, align 8
  store i32* %1, i32** %7, align 8
  store i32 %2, i32* %8, align 4
  store i32* %3, i32** %9, align 8
  %15 = load i32, i32* @MAXHOSTNAMELEN, align 4
  %16 = add nsw i32 %15, 1
  %17 = zext i32 %16 to i64
  %18 = call i8* @llvm.stacksave()
  store i8* %18, i8** %12, align 8
  %19 = alloca i8, i64 %17, align 16
  store i64 %17, i64* %13, align 8
  %20 = load i32*, i32** %7, align 8
  store i32 0, i32* %20, align 4
  %21 = load i8*, i8** %6, align 8
  %22 = call i32 @parseURL(i8* %21, i8* %19, i16* %10, i8** %11, i32* %8)
  %23 = icmp ne i32 %22, 0
  br i1 %23, label %25, label %24

24:                                               ; preds = %4
  store i8* null, i8** %5, align 8
  store i32 1, i32* %14, align 4
  br label %32

25:                                               ; preds = %4
  %26 = load i16, i16* %10, align 2
  %27 = load i8*, i8** %11, align 8
  %28 = load i32*, i32** %7, align 8
  %29 = load i32, i32* %8, align 4
  %30 = load i32*, i32** %9, align 8
  %31 = call i8* @miniwget2(i8* %19, i16 zeroext %26, i8* %27, i32* %28, i32 0, i32 0, i32 %29, i32* %30)
  store i8* %31, i8** %5, align 8
  store i32 1, i32* %14, align 4
  br label %32

32:                                               ; preds = %25, %24
  %33 = load i8*, i8** %12, align 8
  call void @llvm.stackrestore(i8* %33)
  %34 = load i8*, i8** %5, align 8
  ret i8* %34
}

; Function Attrs: nounwind
declare i8* @llvm.stacksave() #1

declare dso_local i32 @parseURL(i8*, i8*, i16*, i8**, i32*) #2

declare dso_local i8* @miniwget2(i8*, i16 zeroext, i8*, i32*, i32, i32, i32, i32*) #2

; Function Attrs: nounwind
declare void @llvm.stackrestore(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
